--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -935,7 +935,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
-    { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:9, name:'Adriano', pos:'Defensa', status:'Lesionado', special: false, performances:[
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
@@ -948,7 +948,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
+    { id:10, name:'Á. Infante', pos:'Defensa', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
@@ -1078,7 +1078,7 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
-    { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
+    { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:1, minutes:18, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
         {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
@@ -1104,7 +1104,7 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
-    { id:22, name:'H. Panizo', pos:'Atacante', status:'Duda', special: false, performances:[
+    { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', special: false, performances:[
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
@@ -1172,10 +1172,11 @@
 
   // 📰 Noticias del equipo
   const news = [
+    { playerId: 20, title: 'Duda', text: "Molestias, desconocido" },
+    { playerId: 10, title: 'Duda', text: "Contusión en la cabeza, 5-10 días" },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ9.html' },
     { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
-    { playerId: 22, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
     { playerId: 16, title: 'Lesión', text: "Lesión en los isquios, desconocido" },
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
     { playerId: 3, title: 'Duda', text: "Molestias en el tobillo, cuello, costillas y contusión en la cabeza, desconocido" },
@@ -1188,7 +1189,7 @@
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
     { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" },
     { playerId: 24, title: 'Lesión', text: "Edema óseo, 8-10 semanas" },
-    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 8-10 semanas" },
+    { playerId: 9, title: 'Adriano', text: "Molestias en el talón y en la pierna, 8-10 semanas" },
     { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
     { playerId: 1, title: 'Duda', text: "Rotura fibrilar en el cuádriceps, 9-11 semanas" },
     { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
