--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -99,21 +99,27 @@
         <div class="overflow-x-auto">
             <table class="w-full border border-gray-200 rounded-xl overflow-hidden shadow text-sm text-center">
                 <thead class="bg-blue-100">
-                <tr><th class="p-3">Posición</th><th class="p-3">Métricas más premiadas</th></tr>
+                <tr><th class="p-3">Posición</th><th class="p-3">Acciones más premiadas</th><th class="p-3">Acciones más perjudiciales</th></tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200">
                 <tr><td class="p-3 font-medium">Porteros</td>
-                    <td class="p-3">Paradas, salidas, despejes de puños</td></tr>
+                    <td class="p-3">Paradas, salidas, despejes por alto</td>
+                    <td class="p-3">Goles encajados, malas salidas, errores que llevan a tiro/gol</td></tr>
                 <tr><td class="p-3 font-medium">Centrales</td>
-                    <td class="p-3">Duelos ganados, recuperaciones, tiros bloqueados</td></tr>
+                    <td class="p-3">Duelos ganados, entradas exitosas, despejes, intercepciones, tiros bloqueados</td>
+                    <td class="p-3">Errores que llevan a tiro/gol, penaltis cometidos, nº veces regateado, faltas cometidas</td></tr>
                 <tr><td class="p-3 font-medium">Laterales / carrileros</td>
-                    <td class="p-3">Recuperaciones, centros precisos, duelos ganados</td></tr>
+                    <td class="p-3">Recuperaciones, duelos ganados, entradas exitosas, intercepciones, progresión de balón</td>
+                    <td class="p-3">Nº veces regateado, centros fallidos</td></tr>
                 <tr><td class="p-3 font-medium">Centrocampistas</td>
-                    <td class="p-3">Recuperaciones, duelos ganados</td></tr>
+                    <td class="p-3">Intercepciones, recuperaciones, duelos ganados, pases completados, regates exitosos</td>
+                    <td class="p-3">Pérdidas de balón, duelos perdidos</td></tr>
                 <tr><td class="p-3 font-medium">Bandas</td>
-                    <td class="p-3">Regates exitosos, duelos en el suelo ganados</td></tr>
+                    <td class="p-3">Regates exitosos, pases clave, duelos en el suelo ganados, faltas recibidas</td>
+                    <td class="p-3">Regates fallidos, duelos en el suelo perdidos</td></tr>
                 <tr><td class="p-3 font-medium">Delanteros</td>
-                    <td class="p-3">Tiros a puerta, duelos ganados</td></tr>
+                    <td class="p-3">Tiros a puerta, faltas recibidas</td>
+                    <td class="p-3">Ocasiones claras falladas, fueras de juego</td></tr>
                 </tbody>
             </table>
         </div>
