--- a/InformeJ11.html
+++ b/InformeJ11.html
@@ -643,17 +643,17 @@
           { number: '1', name: 'Gabri' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja' },
+          { number: '7', name: 'J. Martínez' },
           { number: '5', name: 'Adriano' },
-          { number: '25', name: 'Rodri' },
+          { number: '6', name: 'Rafa' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
-          { number: '8', name: 'Rodri de Castro' },
-          { number: '14', name: 'J. Ogayar' },
+          { number: '10', name: 'Kito' },
+          { number: '23', name: 'Javi Pardo' },
           { number: '3', name: 'Mario' },
-          { number: '23', name: 'Pablo' },
-          { number: '10', name: 'Kito' }
+          { number: '19', name: 'Pablo' },
+          { number: '24', name: 'H. Panizo' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán' }
