--- a/InformeJ11.html
+++ b/InformeJ11.html
@@ -649,11 +649,11 @@
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
-          { number: '10', name: 'Kito' },
+          { number: '8', name: 'Rodri de Castro' },
           { number: '23', name: 'Javi Pardo' },
           { number: '3', name: 'Mario' },
           { number: '19', name: 'Pablo' },
-          { number: '24', name: 'H. Panizo' }
+          { number: '10', name: 'Kito' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán' }
