--- a/InformeJ11.html
+++ b/InformeJ11.html
@@ -651,7 +651,7 @@
         'mediocentros': [
           { number: '8', name: 'Rodri de Castro' },
           { number: '23', name: 'Javi Pardo' },
-          { number: '3', name: 'Mario' },
+          { number: '14', name: 'J. Ogayar' },
           { number: '19', name: 'Pablo' },
           { number: '10', name: 'Kito' }
         ],
