--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
     <div class="panel-title">Stats Temp. 25/26</div>
   </a>
 
-  <a href="Encuestas_MVP2526.html" class="panel">
+  <!-- <a href="Encuestas_MVP2526.html" class="panel">
     <div class="panel-icon"><i class="fas fa-star"></i></div>
     <div class="panel-title">Encuestas MVP</div>
-  </a>
+  </a> -->
 
   <a href="https://sofifa.com/user/36295111/players" target="_blank" class="panel">
     <div class="panel-icon"><i class="fas fa-users"></i></div>
