--- a/InformeJ12.html
+++ b/InformeJ12.html
@@ -618,7 +618,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 12</h1>
-    <div class="resultado-principal">EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">EFMO Boadilla 'B' - UD Las Matas CF</div>
   </div>
 
   <!-- Alineación Probable -->
