--- a/InformeJ12.html
+++ b/InformeJ12.html
@@ -645,7 +645,7 @@
         'defensas': [
           { number: '7', name: 'J. Martínez' },
           { number: '5', name: 'Adriano' },
-          { number: '6', name: 'Rafa' },
+          { number: '6', name: 'Rafa Crooke' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
