--- a/InformeJ10.html
+++ b/InformeJ10.html
@@ -743,7 +743,7 @@
           { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '6', name: 'Rafa Crooke', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
