--- a/InformeJ11.html
+++ b/InformeJ11.html
@@ -741,7 +741,7 @@
           { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
           { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '6', name: 'Rafa Crooke', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
