--- a/InformeJ10.html
+++ b/InformeJ10.html
@@ -741,7 +741,7 @@
         ],
         'defensas': [
           { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
           { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '6', name: 'Rafa Crooke', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
@@ -749,7 +749,7 @@
         'mediocentros': [
           { number: '23', name: 'Javi Pardo', rating: '-', goals: 1, assists: 0, cards: null },
           { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: '🟨' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán', rating: '-', goals: 0, assists: 0, cards: null },
