--- a/InformeJ11.html
+++ b/InformeJ11.html
@@ -618,7 +618,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 11</h1>
-    <div class="resultado-principal">Escuela Europea CF - EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">Escuela Europea CF 3-3 EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
