--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1070,7 +1070,7 @@
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
-    { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'Duda', special: false, performances:[
+    { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
@@ -1199,15 +1199,16 @@
 
   // 📰 Noticias del equipo
   const news = [
+    { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: 10, title: 'Duda', text: "Sobrecarga, 5-10 días" },
-    { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ9.html' },
+    { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
     { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
     { playerId: 16, title: 'Duda', text: "Lesión en los isquios, desconocido" },
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
     { playerId: 3, title: 'Duda', text: "Esguince de tobillo y molestias en el cuello, desconocido" },
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
-    { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, 3-4 semanas" },
+   // { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, 3-4 semanas" },
     { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" },
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
     { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
