--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1179,7 +1179,7 @@
         {points:null, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (0,0+⚽⚽)'},
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:90, goals:2, assists:0, cards:, comment:'⚽⚽ (0,0+⚽⚽)'}
+        {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
